--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charttitleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charttitleupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
-    summary: '<span data-ttu-id="6c41e-101">一个用于更新 ChartTitle 对象上的数据的接口，可用于`chartTitle.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="6c41e-101">An interface for updating data on the ChartTitle object, for use in `chartTitle.set({ ... })`</span></span><!-- --><span data-ttu-id="6c41e-102">.</span><span class="sxs-lookup"><span data-stu-id="6c41e-102"></span></span>'
+    summary: '一个用于更新 ChartTitle 对象上的数据的接口，可用于`chartTitle.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartTitleUpdateData
     fullName: Excel.Interfaces.ChartTitleUpdateData
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.Interfaces.ChartTitleUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="6c41e-103">表示图表标题的格式，包括填充和字体格式。</span><span class="sxs-lookup"><span data-stu-id="6c41e-103">Represents the formatting of a chart title, which includes fill and font formatting.</span></span>
+      表示图表标题的格式，包括填充和字体格式。
 
-      <span data-ttu-id="6c41e-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c41e-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -30,9 +30,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#overlay:member'
     summary: |-
-      <span data-ttu-id="6c41e-105">表示图表标题是否将叠加在图表上的布尔值。</span><span class="sxs-lookup"><span data-stu-id="6c41e-105">Boolean value representing if the chart title will overlay the chart or not.</span></span>
+      指定图表标题是否将覆盖图表。
 
-      <span data-ttu-id="6c41e-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c41e-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: overlay
     fullName: overlay
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#text:member'
     summary: |-
-      <span data-ttu-id="6c41e-107">表示图表的标题文本。</span><span class="sxs-lookup"><span data-stu-id="6c41e-107">Represents the title text of a chart.</span></span>
+      指定图表的标题文本。
 
-      <span data-ttu-id="6c41e-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c41e-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -60,9 +60,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="6c41e-109">表示图表标题对象是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="6c41e-109">A boolean value the represents the visibility of a chart title object.</span></span>
+      指定图表标题是否为 shape.visibile。
 
-      <span data-ttu-id="6c41e-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6c41e-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
