--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.rangefontupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.rangefontupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData:interface'
-    summary: '<span data-ttu-id="635dd-101">一个用于更新 RangeFont 对象上的数据的接口，可用于`rangeFont.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="635dd-101">An interface for updating data on the RangeFont object, for use in `rangeFont.set({ ... })`</span></span><!-- --><span data-ttu-id="635dd-102">.</span><span class="sxs-lookup"><span data-stu-id="635dd-102"></span></span>'
+    summary: '一个用于更新 RangeFont 对象上的数据的接口，可用于`rangeFont.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RangeFontUpdateData
     fullName: Excel.Interfaces.RangeFontUpdateData
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.Interfaces.RangeFontUpdateData#underline:member'
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#bold:member'
     summary: |-
-      <span data-ttu-id="635dd-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="635dd-103">Represents the bold status of font.</span></span>
+      表示字体的加粗状态。
 
-      <span data-ttu-id="635dd-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="635dd-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -32,9 +32,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#color:member'
     summary: |-
-      <span data-ttu-id="635dd-105">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="635dd-105">HTML color code representation of the text color.</span></span> <span data-ttu-id="635dd-106">例如，</span><span class="sxs-lookup"><span data-stu-id="635dd-106">E.g.</span></span> <span data-ttu-id="635dd-107">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="635dd-107">\#FF0000 represents Red.</span></span>
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="635dd-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="635dd-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -47,9 +47,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#italic:member'
     summary: |-
-      <span data-ttu-id="635dd-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="635dd-109">Represents the italic status of the font.</span></span>
+      指定字体的斜体状态。
 
-      <span data-ttu-id="635dd-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="635dd-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -62,9 +62,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="635dd-111">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="635dd-111">Font name (e.g. "Calibri")</span></span>
+      字体名称（例如，"Calibri"）
 
-      <span data-ttu-id="635dd-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="635dd-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -77,9 +77,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#size:member'
     summary: |-
-      <span data-ttu-id="635dd-113">字号</span><span class="sxs-lookup"><span data-stu-id="635dd-113">Font size.</span></span>
+      字号
 
-      <span data-ttu-id="635dd-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="635dd-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: size
     fullName: size
     langs:
@@ -92,9 +92,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#underline:member'
     summary: |-
-      <span data-ttu-id="635dd-115">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="635dd-115">Type of underline applied to the font.</span></span> <span data-ttu-id="635dd-116">有关详细信息，请参阅 RangeUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="635dd-116">See Excel.RangeUnderlineStyle for details.</span></span>
+      应用于字体的下划线类型。 有关详细信息，请参阅 RangeUnderlineStyle。
 
-      <span data-ttu-id="635dd-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="635dd-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
