--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.pivottable.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.pivottable.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.PivotTable:class'
     summary: |-
-      <span data-ttu-id="35ecd-101">表示 Excel 数据透视表。</span><span class="sxs-lookup"><span data-stu-id="35ecd-101">Represents an Excel PivotTable.</span></span> <span data-ttu-id="35ecd-102">若要了解有关数据透视表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理数据透视表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)</span><span class="sxs-lookup"><span data-stu-id="35ecd-102">To learn more about the PivotTable object model, read [Work with PivotTables using the Excel JavaScript API](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)</span></span><!-- --><span data-ttu-id="35ecd-103">.</span><span class="sxs-lookup"><span data-stu-id="35ecd-103"></span></span>
+      表示 Excel 数据透视表。 若要了解有关数据透视表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理数据透视表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-pivottables)<!-- -->.
 
-      <span data-ttu-id="35ecd-104">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35ecd-104">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.PivotTable
     fullName: Excel.PivotTable
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.PivotTable#context:member'
@@ -25,7 +25,7 @@ items:
       - 'excel!Excel.PivotTable#toJSON:member(1)'
       - 'excel!Excel.PivotTable#worksheet:member'
   - uid: 'excel!Excel.PivotTable#context:member'
-    summary: <span data-ttu-id="35ecd-105">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="35ecd-105">The request context associated with the object.</span></span> <span data-ttu-id="35ecd-106">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="35ecd-106">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -37,7 +37,7 @@ items:
         type:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.PivotTable#load:member(1)'
-    summary: <span data-ttu-id="35ecd-107">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="35ecd-107">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="35ecd-108">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="35ecd-108">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -51,11 +51,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="35ecd-109">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="35ecd-109">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.PivotTableLoadOptions:interface'
   - uid: 'excel!Excel.PivotTable#load:member(2)'
-    summary: <span data-ttu-id="35ecd-110">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="35ecd-110">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="35ecd-111">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="35ecd-111">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -69,11 +69,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="35ecd-112">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="35ecd-112">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.PivotTable#load:member(3)'
-    summary: <span data-ttu-id="35ecd-113">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="35ecd-113">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="35ecd-114">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="35ecd-114">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -91,7 +91,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="35ecd-115">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="35ecd-115">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -100,9 +100,9 @@ items:
                       }
   - uid: 'excel!Excel.PivotTable#name:member'
     summary: |-
-      <span data-ttu-id="35ecd-116">PivotTable 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="35ecd-116">Name of the PivotTable.</span></span>
+      PivotTable 对象的名称。
 
-      <span data-ttu-id="35ecd-117">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35ecd-117">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -115,9 +115,9 @@ items:
           - string
   - uid: 'excel!Excel.PivotTable#refresh:member(1)'
     summary: |-
-      <span data-ttu-id="35ecd-118">刷新 PivotTable 对象。</span><span class="sxs-lookup"><span data-stu-id="35ecd-118">Refreshes the PivotTable.</span></span>
+      刷新 PivotTable 对象。
 
-      <span data-ttu-id="35ecd-119">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35ecd-119">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: refresh()
     fullName: refresh()
     langs:
@@ -130,9 +130,9 @@ items:
           - void
         description: ''
   - uid: 'excel!Excel.PivotTable#set:member(1)'
-    summary: '<span data-ttu-id="35ecd-120">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="35ecd-120">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="35ecd-121">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="35ecd-121">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="35ecd-122">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="35ecd-122">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.PivotTable): void`
     name: 'set(properties, options)'
@@ -148,15 +148,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="35ecd-123">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="35ecd-123">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.PivotTableUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="35ecd-124">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="35ecd-124">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.PivotTable#set:member(2)'
-    summary: '<span data-ttu-id="35ecd-125">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="35ecd-125">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -174,7 +174,7 @@ items:
           type:
             - 'excel!Excel.PivotTable:class'
   - uid: 'excel!Excel.PivotTable#toJSON:member(1)'
-    summary: '<span data-ttu-id="35ecd-126">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="35ecd-126">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="35ecd-127">.</span><span class="sxs-lookup"><span data-stu-id="35ecd-127"></span></span> <span data-ttu-id="35ecd-128">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="35ecd-128"></span></span><!-- --><span data-ttu-id="35ecd-129">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 数据透视表对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.PivotTableData`</span><span class="sxs-lookup"><span data-stu-id="35ecd-129">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.PivotTable object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.PivotTableData`</span></span><!-- --><span data-ttu-id="35ecd-130">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="35ecd-130">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Excel 数据透视表对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Excel.Interfaces.PivotTableData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -188,9 +188,9 @@ items:
         description: ''
   - uid: 'excel!Excel.PivotTable#worksheet:member'
     summary: |-
-      <span data-ttu-id="35ecd-131">包含当前 PivotTable 对象的工作表。</span><span class="sxs-lookup"><span data-stu-id="35ecd-131">The worksheet containing the current PivotTable.</span></span>
+      包含当前 PivotTable 对象的工作表。
 
-      <span data-ttu-id="35ecd-132">\[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="35ecd-132">\[ [API set: ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
     fullName: worksheet
     langs:
@@ -202,7 +202,7 @@ items:
         type:
           - 'excel!Excel.Worksheet:class'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -212,7 +212,7 @@ references:
     name: Excel.Interfaces.PivotTableLoadOptions
   - uid: 'excel!Excel.Interfaces.PivotTableUpdateData:interface'
     name: Interfaces.PivotTableUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.PivotTableData:interface'
     name: Excel.Interfaces.PivotTableData
