--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.chartpoint.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.chartpoint.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartPoint:class'
     summary: |-
-      <span data-ttu-id="a6880-101">表示图表中某个系列的点。</span><span class="sxs-lookup"><span data-stu-id="a6880-101">Represents a point of a series in a chart.</span></span>
+      表示图表中某个系列的点。
 
-      <span data-ttu-id="a6880-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6880-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartPoint
     fullName: Excel.ChartPoint
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartPoint#context:member'
@@ -30,7 +30,7 @@ items:
       - 'excel!Excel.ChartPoint#toJSON:member(1)'
       - 'excel!Excel.ChartPoint#value:member'
   - uid: 'excel!Excel.ChartPoint#context:member'
-    summary: <span data-ttu-id="a6880-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="a6880-103">The request context associated with the object.</span></span> <span data-ttu-id="a6880-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="a6880-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -43,9 +43,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartPoint#dataLabel:member'
     summary: |-
-      <span data-ttu-id="a6880-105">返回图表点的数据标签。</span><span class="sxs-lookup"><span data-stu-id="a6880-105">Returns the data label of a chart point.</span></span> <span data-ttu-id="a6880-106">只读。</span><span class="sxs-lookup"><span data-stu-id="a6880-106">Read-only.</span></span>
+      返回图表点的数据标签。
 
-      <span data-ttu-id="a6880-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6880-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabel
     fullName: dataLabel
     langs:
@@ -58,9 +58,9 @@ items:
           - 'excel!Excel.ChartDataLabel:class'
   - uid: 'excel!Excel.ChartPoint#format:member'
     summary: |-
-      <span data-ttu-id="a6880-108">封装图表点的格式属性。</span><span class="sxs-lookup"><span data-stu-id="a6880-108">Encapsulates the format properties chart point.</span></span> <span data-ttu-id="a6880-109">只读。</span><span class="sxs-lookup"><span data-stu-id="a6880-109">Read-only.</span></span>
+      封装图表点的格式属性。
 
-      <span data-ttu-id="a6880-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6880-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -73,9 +73,9 @@ items:
           - 'excel!Excel.ChartPointFormat:class'
   - uid: 'excel!Excel.ChartPoint#hasDataLabel:member'
     summary: |-
-      <span data-ttu-id="a6880-111">表示数据点是否具有数据标签。</span><span class="sxs-lookup"><span data-stu-id="a6880-111">Represents whether a data point has a data label.</span></span> <span data-ttu-id="a6880-112">不适用于曲面图。</span><span class="sxs-lookup"><span data-stu-id="a6880-112">Not applicable for surface charts.</span></span>
+      表示数据点是否具有数据标签。 不适用于曲面图。
 
-      <span data-ttu-id="a6880-113">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6880-113">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hasDataLabel
     fullName: hasDataLabel
     langs:
@@ -87,7 +87,7 @@ items:
         type:
           - boolean
   - uid: 'excel!Excel.ChartPoint#load:member(1)'
-    summary: <span data-ttu-id="a6880-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a6880-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a6880-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a6880-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -101,11 +101,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="a6880-116">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="a6880-116">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartPointLoadOptions:interface'
   - uid: 'excel!Excel.ChartPoint#load:member(2)'
-    summary: <span data-ttu-id="a6880-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a6880-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a6880-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a6880-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -119,11 +119,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="a6880-119">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="a6880-119">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartPoint#load:member(3)'
-    summary: <span data-ttu-id="a6880-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="a6880-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="a6880-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="a6880-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -141,7 +141,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="a6880-122">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="a6880-122">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -150,9 +150,9 @@ items:
                       }
   - uid: 'excel!Excel.ChartPoint#markerBackgroundColor:member'
     summary: |-
-      <span data-ttu-id="a6880-123">表示数据点的标记背景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="a6880-123">HTML color code representation of the marker background color of data point.</span></span> <span data-ttu-id="a6880-124">例如，</span><span class="sxs-lookup"><span data-stu-id="a6880-124">E.g.</span></span> <span data-ttu-id="a6880-125">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="a6880-125">\#FF0000 represents Red.</span></span>
+      数据点的标记背景色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="a6880-126">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6880-126">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerBackgroundColor
     fullName: markerBackgroundColor
     langs:
@@ -165,9 +165,9 @@ items:
           - string
   - uid: 'excel!Excel.ChartPoint#markerForegroundColor:member'
     summary: |-
-      <span data-ttu-id="a6880-127">表示数据点的标记前景色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="a6880-127">HTML color code representation of the marker foreground color of data point.</span></span> <span data-ttu-id="a6880-128">例如，</span><span class="sxs-lookup"><span data-stu-id="a6880-128">E.g.</span></span> <span data-ttu-id="a6880-129">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="a6880-129">\#FF0000 represents Red.</span></span>
+      数据点的标记前景色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="a6880-130">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6880-130">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerForegroundColor
     fullName: markerForegroundColor
     langs:
@@ -180,9 +180,9 @@ items:
           - string
   - uid: 'excel!Excel.ChartPoint#markerSize:member'
     summary: |-
-      <span data-ttu-id="a6880-131">表示数据点的标记大小。</span><span class="sxs-lookup"><span data-stu-id="a6880-131">Represents marker size of data point.</span></span>
+      表示数据点的标记大小。
 
-      <span data-ttu-id="a6880-132">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6880-132">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerSize
     fullName: markerSize
     langs:
@@ -195,9 +195,9 @@ items:
           - number
   - uid: 'excel!Excel.ChartPoint#markerStyle:member'
     summary: |-
-      <span data-ttu-id="a6880-133">表示图表数据点的标记样式。</span><span class="sxs-lookup"><span data-stu-id="a6880-133">Represents marker style of a chart data point.</span></span> <span data-ttu-id="a6880-134">有关详细信息，请参阅 ChartMarkerStyle。</span><span class="sxs-lookup"><span data-stu-id="a6880-134">See Excel.ChartMarkerStyle for details.</span></span>
+      表示图表数据点的标记样式。 有关详细信息，请参阅 ChartMarkerStyle。
 
-      <span data-ttu-id="a6880-135">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6880-135">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: markerStyle
     fullName: markerStyle
     langs:
@@ -209,9 +209,9 @@ items:
         type:
           - 'excel!Excel.ChartPoint#markerStyle~0:complex'
   - uid: 'excel!Excel.ChartPoint#set:member(1)'
-    summary: '<span data-ttu-id="a6880-136">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="a6880-136">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="a6880-137">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="a6880-137">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="a6880-138">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="a6880-138">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartPoint): void`
     name: 'set(properties, options)'
@@ -227,15 +227,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="a6880-139">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="a6880-139">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartPointUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="a6880-140">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="a6880-140">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartPoint#set:member(2)'
-    summary: '<span data-ttu-id="a6880-141">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="a6880-141">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -253,7 +253,7 @@ items:
           type:
             - 'excel!Excel.ChartPoint:class'
   - uid: 'excel!Excel.ChartPoint#toJSON:member(1)'
-    summary: '<span data-ttu-id="a6880-142">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="a6880-142">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="a6880-143">.</span><span class="sxs-lookup"><span data-stu-id="a6880-143"></span></span> <span data-ttu-id="a6880-144">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="a6880-144"></span></span><!-- --><span data-ttu-id="a6880-145">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPoint 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPointData`</span><span class="sxs-lookup"><span data-stu-id="a6880-145">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartPoint object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartPointData`</span></span><!-- --><span data-ttu-id="a6880-146">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="a6880-146">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPoint 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPointData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -267,9 +267,9 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartPoint#value:member'
     summary: |-
-      <span data-ttu-id="a6880-147">返回图表点的值。</span><span class="sxs-lookup"><span data-stu-id="a6880-147">Returns the value of a chart point.</span></span> <span data-ttu-id="a6880-148">只读。</span><span class="sxs-lookup"><span data-stu-id="a6880-148">Read-only.</span></span>
+      返回图表点的值。
 
-      <span data-ttu-id="a6880-149">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a6880-149">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
@@ -281,7 +281,7 @@ items:
         type:
           - any
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -304,7 +304,7 @@ references:
         fullName: ' | "Invalid" | "Automatic" | "None" | "Square" | "Diamond" | "Triangle" | "X" | "Star" | "Dot" | "Dash" | "Circle" | "Plus" | "Picture"'
   - uid: 'excel!Excel.Interfaces.ChartPointUpdateData:interface'
     name: Interfaces.ChartPointUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartPointData:interface'
     name: Excel.Interfaces.ChartPointData
