--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.chartareaformat.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.chartareaformat.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.ChartAreaFormat:class'
     summary: |-
-      <span data-ttu-id="db69f-101">封装整个图表区域的格式属性。</span><span class="sxs-lookup"><span data-stu-id="db69f-101">Encapsulates the format properties for the overall chart area.</span></span>
+      封装整个图表区域的格式属性。
 
-      <span data-ttu-id="db69f-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db69f-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartAreaFormat
     fullName: Excel.ChartAreaFormat
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartAreaFormat#border:member'
@@ -26,9 +26,9 @@ items:
       - 'excel!Excel.ChartAreaFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartAreaFormat#border:member'
     summary: |-
-      <span data-ttu-id="db69f-103">代表图表区域的边框格式，包括颜色、linestyle 和粗细。</span><span class="sxs-lookup"><span data-stu-id="db69f-103">Represents the border format of chart area, which includes color, linestyle, and weight.</span></span> <span data-ttu-id="db69f-104">只读。</span><span class="sxs-lookup"><span data-stu-id="db69f-104">Read-only.</span></span>
+      代表图表区域的边框格式，包括颜色、linestyle 和粗细。
 
-      <span data-ttu-id="db69f-105">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db69f-105">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -40,7 +40,7 @@ items:
         type:
           - 'excel!Excel.ChartBorder:class'
   - uid: 'excel!Excel.ChartAreaFormat#context:member'
-    summary: <span data-ttu-id="db69f-106">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="db69f-106">The request context associated with the object.</span></span> <span data-ttu-id="db69f-107">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="db69f-107">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -53,9 +53,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartAreaFormat#fill:member'
     summary: |-
-      <span data-ttu-id="db69f-108">表示对象的填充格式，包括背景格式信息。</span><span class="sxs-lookup"><span data-stu-id="db69f-108">Represents the fill format of an object, which includes background formatting information.</span></span> <span data-ttu-id="db69f-109">只读。</span><span class="sxs-lookup"><span data-stu-id="db69f-109">Read-only.</span></span>
+      表示对象的填充格式，包括背景格式信息。
 
-      <span data-ttu-id="db69f-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db69f-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
     fullName: fill
     langs:
@@ -68,9 +68,9 @@ items:
           - 'excel!Excel.ChartFill:class'
   - uid: 'excel!Excel.ChartAreaFormat#font:member'
     summary: |-
-      <span data-ttu-id="db69f-111">表示当前对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="db69f-111">Represents the font attributes (font name, font size, color, etc.) for the current object.</span></span> <span data-ttu-id="db69f-112">只读。</span><span class="sxs-lookup"><span data-stu-id="db69f-112">Read-only.</span></span>
+      表示当前对象的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="db69f-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db69f-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
@@ -82,7 +82,7 @@ items:
         type:
           - 'excel!Excel.ChartFont:class'
   - uid: 'excel!Excel.ChartAreaFormat#load:member(1)'
-    summary: <span data-ttu-id="db69f-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="db69f-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="db69f-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="db69f-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -96,11 +96,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="db69f-116">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="db69f-116">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.ChartAreaFormat#load:member(2)'
-    summary: <span data-ttu-id="db69f-117">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="db69f-117">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="db69f-118">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="db69f-118">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -114,11 +114,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="db69f-119">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="db69f-119">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.ChartAreaFormat#load:member(3)'
-    summary: <span data-ttu-id="db69f-120">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="db69f-120">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="db69f-121">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="db69f-121">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -136,7 +136,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="db69f-122">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="db69f-122">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -144,9 +144,9 @@ items:
                           expand?: string;
                       }
   - uid: 'excel!Excel.ChartAreaFormat#set:member(1)'
-    summary: '<span data-ttu-id="db69f-123">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="db69f-123">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="db69f-124">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="db69f-124">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="db69f-125">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="db69f-125">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartAreaFormat): void`
     name: 'set(properties, options)'
@@ -162,15 +162,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="db69f-126">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="db69f-126">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="db69f-127">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="db69f-127">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartAreaFormat#set:member(2)'
-    summary: '<span data-ttu-id="db69f-128">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="db69f-128">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -188,7 +188,7 @@ items:
           type:
             - 'excel!Excel.ChartAreaFormat:class'
   - uid: 'excel!Excel.ChartAreaFormat#toJSON:member(1)'
-    summary: '<span data-ttu-id="db69f-129">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="db69f-129">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="db69f-130">.</span><span class="sxs-lookup"><span data-stu-id="db69f-130"></span></span> <span data-ttu-id="db69f-131">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="db69f-131"></span></span><!-- --><span data-ttu-id="db69f-132">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartAreaFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartAreaFormatData`</span><span class="sxs-lookup"><span data-stu-id="db69f-132">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.ChartAreaFormat object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.ChartAreaFormatData`</span></span><!-- --><span data-ttu-id="db69f-133">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="db69f-133">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartAreaFormat 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartAreaFormatData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartBorder:class'
     name: Excel.ChartBorder
@@ -217,7 +217,7 @@ references:
     name: Excel.Interfaces.ChartAreaFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface'
     name: Interfaces.ChartAreaFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartAreaFormatData:interface'
     name: Excel.Interfaces.ChartAreaFormatData
