--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartaxistitleformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartaxistitleformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="61ee0-101">表示图表坐标轴标题格式。</span><span class="sxs-lookup"><span data-stu-id="61ee0-101">Represents the chart axis title formatting.</span></span>
+      表示图表坐标轴标题格式。
 
-      <span data-ttu-id="61ee0-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61ee0-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartAxisTitleFormatLoadOptions
     fullName: Excel.Interfaces.ChartAxisTitleFormatLoadOptions
     langs:
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#border:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#font:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="61ee0-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="61ee0-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="61ee0-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="61ee0-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="61ee0-105">).</span><span class="sxs-lookup"><span data-stu-id="61ee0-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -29,9 +29,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#border:member'
     summary: |-
-      <span data-ttu-id="61ee0-106">表示边框格式，包括颜色、线条样式和粗细。</span><span class="sxs-lookup"><span data-stu-id="61ee0-106">Represents the border format, which includes color, linestyle, and weight.</span></span>
+      指定图表坐标轴标题的边框格式，包括颜色、linestyle 和粗细。
 
-      <span data-ttu-id="61ee0-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61ee0-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
@@ -44,9 +44,9 @@ items:
           - 'excel!Excel.Interfaces.ChartBorderLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="61ee0-108">表示图表坐标轴标题对象的字体属性，例如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="61ee0-108">Represents the font attributes, such as font name, font size, color, etc. of chart axis title object.</span></span>
+      指定图表轴标题的字体属性，例如字体名称、字体大小、颜色等图表轴标题对象的字体。
 
-      <span data-ttu-id="61ee0-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61ee0-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
