--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangebordercollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.conditionalrangebordercollectionloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="d715d-101">表示构成区域边框的 border 对象。</span><span class="sxs-lookup"><span data-stu-id="d715d-101">Represents the border objects that make up range border.</span></span>
+      表示构成区域边框的 border 对象。
 
-      <span data-ttu-id="d715d-102">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d715d-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions
     fullName: Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#sideIndex:member'
       - 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#style:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#$all:member'
-    summary: '<span data-ttu-id="d715d-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="d715d-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="d715d-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="d715d-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="d715d-105">).</span><span class="sxs-lookup"><span data-stu-id="d715d-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="d715d-106">对于集合中的每一项： HTML 颜色代码，表示边框线的颜色，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="d715d-106">For EACH ITEM in the collection: HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      对于集合中的每一项： HTML 颜色代码（例如，"FFA500"）或命名的\#HTML 颜色（例如 "橙色"），表示边框线的颜色 RRGGBB （如 ""）或命名的 HTML 颜色（例如 "橙色"）。
 
-      <span data-ttu-id="d715d-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d715d-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -45,9 +45,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#sideIndex:member'
     summary: |-
-      <span data-ttu-id="d715d-108">对于集合中的每一项：常量值，用于指示边框的特定侧。</span><span class="sxs-lookup"><span data-stu-id="d715d-108">For EACH ITEM in the collection: Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="d715d-109">有关详细信息，请参阅 ConditionalRangeBorderIndex。</span><span class="sxs-lookup"><span data-stu-id="d715d-109">See Excel.ConditionalRangeBorderIndex for details.</span></span> <span data-ttu-id="d715d-110">只读。</span><span class="sxs-lookup"><span data-stu-id="d715d-110">Read-only.</span></span>
+      对于集合中的每一项：常量值，用于指示边框的特定侧。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
 
-      <span data-ttu-id="d715d-111">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d715d-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sideIndex
     fullName: sideIndex
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderCollectionLoadOptions#style:member'
     summary: |-
-      <span data-ttu-id="d715d-112">对于集合中的每个项目：指定边框线条样式的线条样式的常量之一。</span><span class="sxs-lookup"><span data-stu-id="d715d-112">For EACH ITEM in the collection: One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="d715d-113">有关详细信息，请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="d715d-113">See Excel.BorderLineStyle for details.</span></span>
+      对于集合中的每个项目：指定边框线条样式的线条样式的常量之一。 有关详细信息，请参阅 BorderLineStyle。
 
-      <span data-ttu-id="d715d-114">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d715d-114">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
