--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivotitemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivotitemloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="84193-101">表示 Excel PivotItem。</span><span class="sxs-lookup"><span data-stu-id="84193-101">Represents the Excel PivotItem.</span></span>
+      表示 Excel PivotItem。
 
-      <span data-ttu-id="84193-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84193-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.PivotItemLoadOptions
     fullName: Excel.Interfaces.PivotItemLoadOptions
     langs:
@@ -18,7 +18,7 @@ items:
       - 'excel!Excel.Interfaces.PivotItemLoadOptions#name:member'
       - 'excel!Excel.Interfaces.PivotItemLoadOptions#visible:member'
   - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#$all:member'
-    summary: '<span data-ttu-id="84193-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="84193-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="84193-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="84193-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="84193-105">).</span><span class="sxs-lookup"><span data-stu-id="84193-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#id:member'
     summary: |-
-      <span data-ttu-id="84193-106">PivotItem 的 ID。</span><span class="sxs-lookup"><span data-stu-id="84193-106">Id of the PivotItem.</span></span>
+      PivotItem 的 ID。
 
-      <span data-ttu-id="84193-107">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84193-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -46,9 +46,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#isExpanded:member'
     summary: |-
-      <span data-ttu-id="84193-108">确定是展开项以显示子项还是折叠项并隐藏子项。</span><span class="sxs-lookup"><span data-stu-id="84193-108">Determines whether the item is expanded to show child items or if it's collapsed and child items are hidden.</span></span>
+      确定是展开项以显示子项还是折叠项并隐藏子项。
 
-      <span data-ttu-id="84193-109">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84193-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isExpanded
     fullName: isExpanded
     langs:
@@ -61,9 +61,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="84193-110">PivotItem 的名称。</span><span class="sxs-lookup"><span data-stu-id="84193-110">Name of the PivotItem.</span></span>
+      PivotItem 的名称。
 
-      <span data-ttu-id="84193-111">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84193-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -76,9 +76,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.PivotItemLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="84193-112">确定 PivotItem 是否可见。</span><span class="sxs-lookup"><span data-stu-id="84193-112">Determines whether the PivotItem is visible or not.</span></span>
+      指定 PivotItem 是否可见。
 
-      <span data-ttu-id="84193-113">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84193-113">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
