--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartgridlinesupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartgridlinesupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartGridlinesUpdateData:interface'
-    summary: '<span data-ttu-id="1e785-101">一个用于更新 ChartGridlines 对象上的数据的接口，可用于`chartGridlines.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="1e785-101">An interface for updating data on the ChartGridlines object, for use in `chartGridlines.set({ ... })`</span></span><!-- --><span data-ttu-id="1e785-102">.</span><span class="sxs-lookup"><span data-stu-id="1e785-102"></span></span>'
+    summary: '一个用于更新 ChartGridlines 对象上的数据的接口，可用于`chartGridlines.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartGridlinesUpdateData
     fullName: Excel.Interfaces.ChartGridlinesUpdateData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.ChartGridlinesUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartGridlinesUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="1e785-103">表示图表网格线的格式。</span><span class="sxs-lookup"><span data-stu-id="1e785-103">Represents the formatting of chart gridlines.</span></span>
+      表示图表网格线的格式。
 
-      <span data-ttu-id="1e785-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e785-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartGridlinesUpdateData#visible:member'
     summary: |-
-      <span data-ttu-id="1e785-105">表示坐标轴网格线是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="1e785-105">Boolean value representing if the axis gridlines are visible or not.</span></span>
+      指定轴网格线是否可见。
 
-      <span data-ttu-id="1e785-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="1e785-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
