--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.pagelayoutmarginoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.pagelayoutmarginoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.PageLayoutMarginOptions:interface'
     summary: |-
-      <span data-ttu-id="29010-101">代表页面布局边距中的选项。</span><span class="sxs-lookup"><span data-stu-id="29010-101">Represents the options in page layout margins.</span></span>
+      代表页面布局边距中的选项。
 
-      <span data-ttu-id="29010-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29010-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.PageLayoutMarginOptions
     fullName: Excel.PageLayoutMarginOptions
     langs:
@@ -20,9 +20,9 @@ items:
       - 'excel!Excel.PageLayoutMarginOptions#top:member'
   - uid: 'excel!Excel.PageLayoutMarginOptions#bottom:member'
     summary: |-
-      <span data-ttu-id="29010-103">表示要在打印时使用的页面布局下边距（使用指定的单位）。</span><span class="sxs-lookup"><span data-stu-id="29010-103">Represents the page layout bottom margin in the unit specified to use for printing.</span></span>
+      指定要用于打印的单位的页面下边距（单位为单位）。
 
-      <span data-ttu-id="29010-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29010-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bottom
     fullName: bottom
     langs:
@@ -35,9 +35,9 @@ items:
           - number
   - uid: 'excel!Excel.PageLayoutMarginOptions#footer:member'
     summary: |-
-      <span data-ttu-id="29010-105">表示要在打印时使用的页面布局页脚边距（使用指定的单位）。</span><span class="sxs-lookup"><span data-stu-id="29010-105">Represents the page layout footer margin in the unit specified to use for printing.</span></span>
+      指定要用于打印的单位的页面布局页脚边距。
 
-      <span data-ttu-id="29010-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29010-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: footer
     fullName: footer
     langs:
@@ -50,9 +50,9 @@ items:
           - number
   - uid: 'excel!Excel.PageLayoutMarginOptions#header:member'
     summary: |-
-      <span data-ttu-id="29010-107">表示要在打印时使用的页面布局页眉边距（使用指定的单位）。</span><span class="sxs-lookup"><span data-stu-id="29010-107">Represents the page layout header margin in the unit specified to use for printing.</span></span>
+      以指定要用于打印的单位指定页面布局标题边距。
 
-      <span data-ttu-id="29010-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29010-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: header
     fullName: header
     langs:
@@ -65,9 +65,9 @@ items:
           - number
   - uid: 'excel!Excel.PageLayoutMarginOptions#left:member'
     summary: |-
-      <span data-ttu-id="29010-109">表示要在打印时使用的页面布局左边距（使用指定的单位）。</span><span class="sxs-lookup"><span data-stu-id="29010-109">Represents the page layout left margin in the unit specified to use for printing.</span></span>
+      按指定要用于打印的单位指定页面布局的左边距。
 
-      <span data-ttu-id="29010-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29010-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -80,9 +80,9 @@ items:
           - number
   - uid: 'excel!Excel.PageLayoutMarginOptions#right:member'
     summary: |-
-      <span data-ttu-id="29010-111">表示要在打印时使用的页面布局右边距（使用指定的单位）。</span><span class="sxs-lookup"><span data-stu-id="29010-111">Represents the page layout right margin in the unit specified to use for printing.</span></span>
+      指定要用于打印的单位的页面（以指定单位为右边距）。
 
-      <span data-ttu-id="29010-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29010-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: right
     fullName: right
     langs:
@@ -95,9 +95,9 @@ items:
           - number
   - uid: 'excel!Excel.PageLayoutMarginOptions#top:member'
     summary: |-
-      <span data-ttu-id="29010-113">表示要在打印时使用的页面布局上边距（使用指定的单位）。</span><span class="sxs-lookup"><span data-stu-id="29010-113">Represents the page layout top margin in the unit specified to use for printing.</span></span>
+      指定要用于打印的单位的页面上边距（按指定单位）。
 
-      <span data-ttu-id="29010-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="29010-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
