--- a/docs/docs-ref-autogen/visio/visio/visio.documentview.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.documentview.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'visio!Visio.DocumentView:class'
     summary: |-
-      <span data-ttu-id="dc7da-101">表示 DocumentView 类。</span><span class="sxs-lookup"><span data-stu-id="dc7da-101">Represents the DocumentView class.</span></span>
+      表示 DocumentView 类。
 
-      <span data-ttu-id="dc7da-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="dc7da-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.DocumentView
     fullName: Visio.DocumentView
     langs:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.DocumentView#context:member'
@@ -27,7 +27,7 @@ items:
       - 'visio!Visio.DocumentView#set:member(2)'
       - 'visio!Visio.DocumentView#toJSON:member(1)'
   - uid: 'visio!Visio.DocumentView#context:member'
-    summary: <span data-ttu-id="dc7da-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="dc7da-103">The request context associated with the object.</span></span> <span data-ttu-id="dc7da-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="dc7da-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -40,9 +40,9 @@ items:
           - 'visio!Visio.RequestContext:class'
   - uid: 'visio!Visio.DocumentView#disableHyperlinks:member'
     summary: |-
-      <span data-ttu-id="dc7da-105">禁用超链接。</span><span class="sxs-lookup"><span data-stu-id="dc7da-105">Disable Hyperlinks.</span></span>
+      禁用超链接。
 
-      <span data-ttu-id="dc7da-106">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="dc7da-106">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: disableHyperlinks
     fullName: disableHyperlinks
     langs:
@@ -56,7 +56,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="dc7da-107">示例</span><span class="sxs-lookup"><span data-stu-id="dc7da-107">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Visio.run(session, function (ctx) {
@@ -72,9 +72,9 @@ items:
           ```
   - uid: 'visio!Visio.DocumentView#disablePan:member'
     summary: |-
-      <span data-ttu-id="dc7da-108">禁用平移。</span><span class="sxs-lookup"><span data-stu-id="dc7da-108">Disable Pan.</span></span>
+      禁用平移。
 
-      <span data-ttu-id="dc7da-109">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="dc7da-109">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: disablePan
     fullName: disablePan
     langs:
@@ -87,9 +87,9 @@ items:
           - boolean
   - uid: 'visio!Visio.DocumentView#disablePanZoomWindow:member'
     summary: |-
-      <span data-ttu-id="dc7da-110">禁用 PanZoomWindow。</span><span class="sxs-lookup"><span data-stu-id="dc7da-110">Disable PanZoomWindow.</span></span>
+      禁用 PanZoomWindow。
 
-      <span data-ttu-id="dc7da-111">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="dc7da-111">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: disablePanZoomWindow
     fullName: disablePanZoomWindow
     langs:
@@ -102,9 +102,9 @@ items:
           - boolean
   - uid: 'visio!Visio.DocumentView#disableZoom:member'
     summary: |-
-      <span data-ttu-id="dc7da-112">禁用缩放。</span><span class="sxs-lookup"><span data-stu-id="dc7da-112">Disable Zoom.</span></span>
+      禁用缩放。
 
-      <span data-ttu-id="dc7da-113">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="dc7da-113">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: disableZoom
     fullName: disableZoom
     langs:
@@ -117,9 +117,9 @@ items:
           - boolean
   - uid: 'visio!Visio.DocumentView#hideDiagramBoundary:member'
     summary: |-
-      <span data-ttu-id="dc7da-114">隐藏关系图边界。</span><span class="sxs-lookup"><span data-stu-id="dc7da-114">Hide Diagram Boundary.</span></span>
+      隐藏关系图边界。
 
-      <span data-ttu-id="dc7da-115">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="dc7da-115">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: hideDiagramBoundary
     fullName: hideDiagramBoundary
     langs:
@@ -131,15 +131,15 @@ items:
         type:
           - boolean
   - uid: 'visio!Visio.DocumentView#load:member(1)'
-    summary: <span data-ttu-id="dc7da-116">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="dc7da-116">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="dc7da-117">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="dc7da-117">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="dc7da-118">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="dc7da-118">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="dc7da-119">`load(option?: string | string[]): Visio.DocumentView`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="dc7da-119">`load(option?: string | string[]): Visio.DocumentView` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Visio.DocumentView`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="dc7da-120">`load(option?: { select?: string; expand?: string; }): Visio.DocumentView`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="dc7da-120">`load(option?: { select?: string; expand?: string; }): Visio.DocumentView` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Visio.DocumentView`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="dc7da-121">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.DocumentView`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="dc7da-121">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.DocumentView` - Only available on collection types.</span></span> <span data-ttu-id="dc7da-122">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="dc7da-122">It is similar to the preceding signature.</span></span> <span data-ttu-id="dc7da-123">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="dc7da-123">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="dc7da-124">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="dc7da-124">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="dc7da-125">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="dc7da-125">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.DocumentView`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -157,7 +157,7 @@ items:
           type:
             - 'visio!Visio.Interfaces.DocumentViewLoadOptions:interface'
   - uid: 'visio!Visio.DocumentView#load:member(2)'
-    summary: <span data-ttu-id="dc7da-126">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="dc7da-126">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="dc7da-127">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="dc7da-127">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -171,11 +171,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="dc7da-128">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="dc7da-128">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'visio!Visio.DocumentView#load:member(3)'
-    summary: <span data-ttu-id="dc7da-129">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="dc7da-129">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="dc7da-130">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="dc7da-130">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -189,13 +189,13 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="dc7da-131">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="dc7da-131">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
   - uid: 'visio!Visio.DocumentView#set:member(1)'
-    summary: '<span data-ttu-id="dc7da-132">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="dc7da-132">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="dc7da-133">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="dc7da-133">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="dc7da-134">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="dc7da-134">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Visio.DocumentView): void`
     name: 'set(properties, options)'
@@ -211,15 +211,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="dc7da-135">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="dc7da-135">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'visio!Visio.Interfaces.DocumentViewUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="dc7da-136">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="dc7da-136">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'visio!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'visio!Visio.DocumentView#set:member(2)'
-    summary: '<span data-ttu-id="dc7da-137">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="dc7da-137">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -237,7 +237,7 @@ items:
           type:
             - 'visio!Visio.DocumentView:class'
   - uid: 'visio!Visio.DocumentView#toJSON:member(1)'
-    summary: '<span data-ttu-id="dc7da-138">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="dc7da-138">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="dc7da-139">.</span><span class="sxs-lookup"><span data-stu-id="dc7da-139"></span></span> <span data-ttu-id="dc7da-140">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="dc7da-140"></span></span><!-- --><span data-ttu-id="dc7da-141">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 DocumentView 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.DocumentViewData`</span><span class="sxs-lookup"><span data-stu-id="dc7da-141">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Visio.DocumentView object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Visio.Interfaces.DocumentViewData`</span></span><!-- --><span data-ttu-id="dc7da-142">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="dc7da-142">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 DocumentView 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Visio.Interfaces.DocumentViewData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -250,7 +250,7 @@ items:
           - 'visio!Visio.Interfaces.DocumentViewData:interface'
         description: ''
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.RequestContext:class'
     name: RequestContext
@@ -260,7 +260,7 @@ references:
     name: Visio.Interfaces.DocumentViewLoadOptions
   - uid: 'visio!Visio.Interfaces.DocumentViewUpdateData:interface'
     name: Interfaces.DocumentViewUpdateData
-  - uid: 'visio!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'visio!Visio.Interfaces.DocumentViewData:interface'
     name: Visio.Interfaces.DocumentViewData
