--- a/docs/docs-ref-autogen/visio/visio/visio.hyperlink.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.hyperlink.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'visio!Visio.Hyperlink:class'
     summary: |-
-      <span data-ttu-id="4ec62-101">表示 Hyperlink 对象。</span><span class="sxs-lookup"><span data-stu-id="4ec62-101">Represents the Hyperlink.</span></span>
+      表示 Hyperlink 对象。
 
-      <span data-ttu-id="4ec62-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="4ec62-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.Hyperlink
     fullName: Visio.Hyperlink
     langs:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.Hyperlink#address:member'
@@ -25,9 +25,9 @@ items:
       - 'visio!Visio.Hyperlink#toJSON:member(1)'
   - uid: 'visio!Visio.Hyperlink#address:member'
     summary: |-
-      <span data-ttu-id="4ec62-103">获取超链接对象的地址。</span><span class="sxs-lookup"><span data-stu-id="4ec62-103">Gets the address of the Hyperlink object.</span></span> <span data-ttu-id="4ec62-104">只读。</span><span class="sxs-lookup"><span data-stu-id="4ec62-104">Read-only.</span></span>
+      获取超链接对象的地址。 只读。
 
-      <span data-ttu-id="4ec62-105">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="4ec62-105">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: address
     fullName: address
     langs:
@@ -39,7 +39,7 @@ items:
         type:
           - string
   - uid: 'visio!Visio.Hyperlink#context:member'
-    summary: <span data-ttu-id="4ec62-106">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="4ec62-106">The request context associated with the object.</span></span> <span data-ttu-id="4ec62-107">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="4ec62-107">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -52,9 +52,9 @@ items:
           - 'visio!Visio.RequestContext:class'
   - uid: 'visio!Visio.Hyperlink#description:member'
     summary: |-
-      <span data-ttu-id="4ec62-108">获取超链接的说明。</span><span class="sxs-lookup"><span data-stu-id="4ec62-108">Gets the description of a hyperlink.</span></span> <span data-ttu-id="4ec62-109">只读。</span><span class="sxs-lookup"><span data-stu-id="4ec62-109">Read-only.</span></span>
+      获取超链接的说明。 只读。
 
-      <span data-ttu-id="4ec62-110">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="4ec62-110">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: description
     fullName: description
     langs:
@@ -67,9 +67,9 @@ items:
           - string
   - uid: 'visio!Visio.Hyperlink#extraInfo:member'
     summary: |-
-      <span data-ttu-id="4ec62-111">获取用于解析超链接的 URL 的额外 URL 请求信息。</span><span class="sxs-lookup"><span data-stu-id="4ec62-111">Gets the extra URL request information used to resolve the hyperlink's URL.</span></span> <span data-ttu-id="4ec62-112">只读。</span><span class="sxs-lookup"><span data-stu-id="4ec62-112">Read-only.</span></span>
+      获取用于解析超链接的 URL 的额外 URL 请求信息。 只读。
 
-      <span data-ttu-id="4ec62-113">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="4ec62-113">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: extraInfo
     fullName: extraInfo
     langs:
@@ -81,17 +81,17 @@ items:
         type:
           - string
   - uid: 'visio!Visio.Hyperlink#load:member(1)'
-    summary: <span data-ttu-id="4ec62-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="4ec62-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="4ec62-115">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="4ec62-115">You must call "context.sync()" before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      <span data-ttu-id="4ec62-116">除了此签名之外，此方法还具有以下签名：</span><span class="sxs-lookup"><span data-stu-id="4ec62-116">In addition to this signature, this method has the following signatures:</span></span>
+      除了此签名之外，此方法还具有以下签名：
 
-      <span data-ttu-id="4ec62-117">`load(option?: string | string[]): Visio.Hyperlink`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="4ec62-117">`load(option?: string | string[]): Visio.Hyperlink` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      `load(option?: string | string[]): Visio.Hyperlink`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      <span data-ttu-id="4ec62-118">`load(option?: { select?: string; expand?: string; }): Visio.Hyperlink`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="4ec62-118">`load(option?: { select?: string; expand?: string; }): Visio.Hyperlink` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      `load(option?: { select?: string; expand?: string; }): Visio.Hyperlink`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      <span data-ttu-id="4ec62-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Hyperlink`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="4ec62-119">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Hyperlink` - Only available on collection types.</span></span> <span data-ttu-id="4ec62-120">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="4ec62-120">It is similar to the preceding signature.</span></span> <span data-ttu-id="4ec62-121">Top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="4ec62-121">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="4ec62-122">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="4ec62-122">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="4ec62-123">如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="4ec62-123">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Visio.Hyperlink`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
 
-      #### <a name="examples"></a><span data-ttu-id="4ec62-124">示例</span><span class="sxs-lookup"><span data-stu-id="4ec62-124">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       Visio.run(session, function (ctx) {
@@ -129,7 +129,7 @@ items:
           type:
             - 'visio!Visio.Interfaces.HyperlinkLoadOptions:interface'
   - uid: 'visio!Visio.Hyperlink#load:member(2)'
-    summary: <span data-ttu-id="4ec62-125">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="4ec62-125">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="4ec62-126">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="4ec62-126">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -143,11 +143,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="4ec62-127">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="4ec62-127">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'visio!Visio.Hyperlink#load:member(3)'
-    summary: <span data-ttu-id="4ec62-128">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="4ec62-128">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="4ec62-129">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="4ec62-129">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -161,14 +161,14 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="4ec62-130">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="4ec62-130">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
   - uid: 'visio!Visio.Hyperlink#subAddress:member'
     summary: |-
-      <span data-ttu-id="4ec62-131">获取超链接对象的子地址。</span><span class="sxs-lookup"><span data-stu-id="4ec62-131">Gets the sub-address of the Hyperlink object.</span></span> <span data-ttu-id="4ec62-132">只读。</span><span class="sxs-lookup"><span data-stu-id="4ec62-132">Read-only.</span></span>
+      获取超链接对象的子地址。 只读。
 
-      <span data-ttu-id="4ec62-133">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="4ec62-133">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: subAddress
     fullName: subAddress
     langs:
@@ -180,7 +180,7 @@ items:
         type:
           - string
   - uid: 'visio!Visio.Hyperlink#toJSON:member(1)'
-    summary: '<span data-ttu-id="4ec62-134">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="4ec62-134">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="4ec62-135">.</span><span class="sxs-lookup"><span data-stu-id="4ec62-135"></span></span> <span data-ttu-id="4ec62-136">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="4ec62-136"></span></span><!-- --><span data-ttu-id="4ec62-137">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Visio. Hyperlink 对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Visio.Interfaces.HyperlinkData`</span><span class="sxs-lookup"><span data-stu-id="4ec62-137">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Visio.Hyperlink object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Visio.Interfaces.HyperlinkData`</span></span><!-- --><span data-ttu-id="4ec62-138">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="4ec62-138">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Visio. Hyperlink 对象是 API 对象，但`toJSON`方法返回一个简单的 JavaScript 对象（类型为`Visio.Interfaces.HyperlinkData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -193,7 +193,7 @@ items:
           - 'visio!Visio.Interfaces.HyperlinkData:interface'
         description: ''
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.RequestContext:class'
     name: RequestContext
